Feat : Push web page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,374 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel To Egypt</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travel To Egypt</title>
 
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <h1>hello to our web page</h1>
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- start first page -->
+    <div class="first-page">
+      <!-- Start Header -->
+      <div class="nav">
+        <div class="container">
+          <div class="logo">
+            <h1>Tr<span>avel</span></h1>
+          </div>
+          <ul class="links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Explore</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Offer</a></li>
+            <li><a href="#">Contact</a></li>
+            <li class="cls"></li>
+          </ul>
+          <div class="cls"></div>
+        </div>
+      </div>
+      <!-- End Header -->
+      <div class="container">
+        <div class="content">
+          <h2>Travel to <span>Egypt</span></h2>
+          <h3>Explore Egypt with us</h3>
+        </div>
+      </div>
+      <!-- start search form -->
+      <form action="">
+        <div class="container">
+          <div class="search-form">
+            <input type="text" placeholder="destination" />
+
+            <label for="checkin">Check in</label>
+            <input type="date" id="checkin" />
+
+            <label for="checkout">Check out</label>
+            <input type="date" id="checkout" />
+
+            <br />
+
+            <select name="adults" id="adults" aria-placeholder="adults">
+              <option selected>Adults</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+
+            <select name="childern" id="childern">
+              <option selected>Childern</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+
+            <select name="room" id="room">
+              <option selected>Room</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+
+            <select name="roomType" id="roomType">
+              <option selected>Room Type</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <!-- end first page -->
+
+    <!-- start second page -->
+    <div class="sec-page">
+      <div class="container">
+        <h2>About Us</h2>
+
+        <div class="content">
+          <div class="text">
+            <h2>Egypt Pharos</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
+              doloribus vitae? Cupiditate, distinctio nulla, nam laborum cumque
+              dicta aliquam deserunt aspernatur sunt magnam dolorum
+              voluptatibus, eveniet illo perspiciatis eligendi? Natus
+              perferendis, quia neque facere ut ratione impedit a expedita
+              placeat, aut dignissimos voluptatem aperiam adipisci.
+            </p>
+          </div>
+          <div class="image">
+            <img src="images/history/cairo-bg.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <div class="cls"></div>
+    </div>
+
+    <!-- end second page -->
+
+    <!-- start explore page -->
+    <div class="explore-page">
+      <div class="container">
+        <h2>Explore</h2>
+
+        <div class="content">
+          <div class="text">
+            <h2>We'll take care of everything :</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto sequi blanditiis ipsum, sapiente doloribus, similique
+              aut hic commodi nemo tenetur distinctio quos necessitatibus
+              placeat, eum laborum libero accusantium illo assumenda.
+            </p>
+          </div>
+          <div class="image">
+            <video src="video/This_is_Egypt(720p).mp4" muted controls></video>
+          </div>
+          <div class="cls"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- end explore page -->
+
+    <!-- start Blog Page -->
+    <div class="blog-page">
+      <div class="container">
+        <h2>Blog</h2>
+
+        <div class="card">
+          <div class="image">
+            <img src="images/nautical/gouna-trip3.jpeg" alt="gouna" />
+          </div>
+          <div class="text">
+            <h3>Gouna</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              distinctio ea veniam nostrum labore quam enim, magnam earum
+              pariatur impedit?
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img src="images/nautical/alamein-trip.jpg" alt="alamein" />
+          </div>
+          <div class="text">
+            <h3>Alamein</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              distinctio ea veniam nostrum labore quam enim, magnam earum
+              pariatur impedit?
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img src="images/nautical/alex1.jpg" alt="qaitbay" />
+          </div>
+          <div class="text">
+            <h3>Qaitbay</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              distinctio ea veniam nostrum labore quam enim, magnam earum
+              pariatur impedit?
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img src="images/history/Philae.jpeg" alt="Philae" />
+          </div>
+          <div class="text">
+            <h3>Philae</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              distinctio ea veniam nostrum labore quam enim, magnam earum
+              pariatur impedit?
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img
+              src="images/history/fascinating Sound and Light show.jpeg"
+              alt="fascinating Sound and Light show"
+            />
+          </div>
+          <div class="text">
+            <h3>Sound and Light show</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              distinctio ea veniam nostrum labore quam enim, magnam earum
+              pariatur impedit?
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img
+              src="images/adventure/The-desert-in-Marsa-Alam.jpg"
+              alt="desert-in-Marsa-Alam"
+            />
+          </div>
+          <div class="text">
+            <h3>Desert in Marsa-Alam</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              distinctio ea veniam nostrum labore quam enim, magnam earum
+              pariatur impedit?
+            </p>
+          </div>
+        </div>
+
+        <div class="cls"></div>
+      </div>
+    </div>
+
+    <div class="offers-page">
+      <div class="container">
+        <h2>Offers</h2>
+
+        <div class="card2">
+          <div class="image">
+            <img
+              src="images/adventure/The-desert-in-Marsa-Alam.jpg"
+              alt="desert-in-Marsa-Alam"
+            />
+          </div>
+          <div class="text">
+            <h3>Desert in Marsa-Alam</h3>
+            <p>Price : <del>1500LE</del> <span>1000LE</span></p>
+
+            <button>Book</button>
+          </div>
+        </div>
+
+        <div class="card2">
+          <div class="image">
+            <img src="images/trip1.jpg" alt="Alamein" />
+          </div>
+          <div class="text">
+            <h3>Alamein</h3>
+            <p>Price : <del>1500LE</del> <span>1000LE</span></p>
+
+            <button>Book</button>
+          </div>
+        </div>
+
+        <div class="card2">
+          <div class="image">
+            <img src="images/trip2.jpg" alt="Gouna" />
+          </div>
+          <div class="text">
+            <h3>Gouna</h3>
+            <p>Price : <del>1500LE</del> <span>10000LE</span></p>
+
+            <button>Book</button>
+          </div>
+        </div>
+
+        <div class="card2">
+          <div class="image">
+            <img src="images/nautical/gouna-trip2.jpeg" alt="Gouna" />
+          </div>
+          <div class="text">
+            <h3>Gouna</h3>
+            <p>Price : <del>1500LE</del> <span>10000$</span></p>
+
+            <button>Book</button>
+          </div>
+        </div>
+
+        <div class="card2">
+          <div class="image">
+            <img src="images/nautical/huragda-trip2.jpeg" alt="huragda" />
+          </div>
+          <div class="text">
+            <h3>Huragda</h3>
+            <p>Price : <del>1500LE</del> <span>1000LE</span></p>
+
+            <button>Book</button>
+          </div>
+        </div>
+
+        <div class="card2">
+          <div class="image">
+            <img
+              src="images/nautical/sharm-elshaikh.jpeg"
+              alt="sharm-elshaikh"
+            />
+          </div>
+          <div class="text">
+            <h3>Sharm Elshaikh</h3>
+            <p>Price : <del>1500LE</del> <span>1000LE</span></p>
+
+            <button>Book</button>
+          </div>
+        </div>
+
+        <div class="cls"></div>
+      </div>
+    </div>
+
+    <div class="contact-page">
+      <div class="container">
+        <h2>Contact</h2>
+
+        <div class="contact-form">
+          <form action="">
+            <input type="text" class="name" placeholder="Name" />
+            <input type="email" class="email" placeholder="Email" />
+            <div class="cls"></div>
+            <input type="text" placeholder="Subject" />
+            <textarea name="message" placeholder="message for us"></textarea>
+
+            <button>Send message</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <p>Copy Right 2024 © By <span>Moaz Mohamed</span> All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
